core export preset

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -154,3 +154,29 @@ capabilities/location=false
 capabilities/microphone=false
 capabilities/proximity=false
 capabilities/webcam=false
+
+[preset.4]
+
+name="Linux/X11 Core"
+platform="Linux/X11"
+runnable=false
+custom_features=""
+export_filter="resources"
+export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://debug.gd", "res://default_env.tres", "res://gamestate.gd", "res://input_maping.gd", "res://namelist.gd", "res://options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
+include_filter=""
+exclude_filter=""
+export_path="_exports/core_64_linux/MoonTown.x86_64"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.4.options]
+
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
+binary_format/64_bits=true
+custom_template/release=""
+custom_template/debug=""
