--- a/export_presets_server.cfg
+++ b/export_presets_server.cfg
@@ -3,7 +3,7 @@
 name="pck"
 platform="Linux/X11"
 runnable=true
-custom_features=""
+custom_features="updater"
 export_filter="all_resources"
 include_filter="*.cfg"
 exclude_filter=""
