export with updater feature

--- a/export_presets_server.cfg
+++ b/export_presets_server.cfg
@@ -7,7 +7,7 @@ custom_features="updater"
 export_filter="all_resources"
 include_filter="*.cfg"
 exclude_filter=""
-export_path=""
+export_path="_exports/core_64_linux/updater_64_linux"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
