--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -58,14 +58,15 @@ application/trademarks=""
 
 [preset.2]
 
-name="Mac OSX"
+name="Mac OSX Core"
 platform="Mac OSX"
-runnable=true
+runnable=false
 custom_features=""
-export_filter="all_resources"
+export_filter="resources"
+export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://debug.gd", "res://default_env.tres", "res://gamestate.gd", "res://input_maping.gd", "res://namelist.gd", "res://options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
 include_filter=""
 exclude_filter=""
-export_path="_exports/full_64_mac/MoonTown_Mac.zip"
+export_path="_exports/core_64_mac/MoonTown.zip"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -83,6 +84,8 @@ application/short_version="1.0"
 application/version="1.0"
 application/copyright=""
 display/high_res=false
+codesign/identity=""
+codesign/entitlements=""
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
@@ -180,3 +183,36 @@ texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
 custom_template/release=""
 custom_template/debug=""
+
+[preset.5]
+
+name="Mac OSX"
+platform="Mac OSX"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="_exports/full_64_mac/MoonTown.zip"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.5.options]
+
+custom_package/debug=""
+custom_package/release=""
+application/name="Moonwards"
+application/info="Made with Godot Engine"
+application/icon=""
+application/identifier=""
+application/signature=""
+application/short_version="1.0"
+application/version="1.0"
+application/copyright=""
+display/high_res=false
+codesign/identity=""
+codesign/entitlements=""
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
