--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,6 +3,7 @@
 name="Linux/X11"
 platform="Linux/X11"
 runnable=true
+custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
