--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="Linux/X11"
+name="Linux/X11 Full"
 platform="Linux/X11"
 runnable=true
 custom_features=""
@@ -25,7 +25,58 @@ custom_template/debug=""
 
 [preset.1]
 
-name="Windows Desktop"
+name="Linux/X11 Core"
+platform="Linux/X11"
+runnable=false
+custom_features=""
+export_filter="resources"
+export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://debug.gd", "res://default_env.tres", "res://gamestate.gd", "res://input_maping.gd", "res://namelist.gd", "res://options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
+include_filter=""
+exclude_filter=""
+export_path="_exports/core_64_linux/MoonTown.x86_64"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.1.options]
+
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
+binary_format/64_bits=true
+custom_template/release=""
+custom_template/debug=""
+
+[preset.2]
+
+name="Linux/X11 Update Server"
+platform="Linux/X11"
+runnable=true
+custom_features="updater"
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path="_exports/updater_64_linux/MoonTown.x86_64"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.2.options]
+
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
+binary_format/64_bits=true
+custom_template/release=""
+custom_template/debug=""
+
+[preset.3]
+
+name="Win64 Full"
 platform="Windows Desktop"
 runnable=true
 custom_features=""
@@ -37,7 +88,7 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.1.options]
+[preset.3.options]
 
 texture_format/bptc=false
 texture_format/s3tc=true
@@ -56,119 +107,17 @@ application/file_description=""
 application/copyright=""
 application/trademarks=""
 
-[preset.2]
-
-name="Mac OSX Core"
-platform="Mac OSX"
-runnable=false
-custom_features=""
-export_filter="resources"
-export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://debug.gd", "res://default_env.tres", "res://gamestate.gd", "res://input_maping.gd", "res://namelist.gd", "res://options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
-include_filter=""
-exclude_filter=""
-export_path="_exports/core_64_mac/MoonTown.zip"
-patch_list=PoolStringArray(  )
-script_export_mode=1
-script_encryption_key=""
-
-[preset.2.options]
-
-custom_package/debug=""
-custom_package/release=""
-application/name=""
-application/info="Made with Godot Engine"
-application/icon=""
-application/identifier=""
-application/signature=""
-application/short_version="1.0"
-application/version="1.0"
-application/copyright=""
-display/high_res=false
-codesign/identity=""
-codesign/entitlements=""
-texture_format/s3tc=true
-texture_format/etc=false
-texture_format/etc2=false
-
-[preset.3]
-
-name="Windows Universal"
-platform="Windows Universal"
-runnable=true
-custom_features=""
-export_filter="all_resources"
-include_filter=""
-exclude_filter=""
-export_path=""
-patch_list=PoolStringArray(  )
-script_export_mode=1
-script_encryption_key=""
-
-[preset.3.options]
-
-architecture/target=1
-command_line/extra_args=""
-package/display_name=""
-package/short_name=""
-package/unique_name=""
-package/description=""
-package/publisher=""
-package/publisher_display_name=""
-identity/product_guid=""
-identity/publisher_guid=""
-signing/certificate=""
-signing/password=""
-signing/algorithm=2
-version/major=1
-version/minor=0
-version/build=0
-version/revision=0
-orientation/landscape=true
-orientation/portrait=true
-orientation/landscape_flipped=true
-orientation/portrait_flipped=true
-images/background_color="transparent"
-tiles/show_name_on_square150x150=false
-tiles/show_name_on_wide310x150=false
-tiles/show_name_on_square310x310=false
-custom_template/debug=""
-custom_template/release=""
-capabilities/all_Joyn=false
-capabilities/code_Generation=false
-capabilities/internet_Client=false
-capabilities/internet_Client_Server=false
-capabilities/private_Network_Client_Server=false
-capabilities/appointments=false
-capabilities/blocked_Chat_Messages=false
-capabilities/chat=false
-capabilities/contacts=false
-capabilities/enterprise_Authentication=false
-capabilities/music_Library=false
-capabilities/objects_3D=false
-capabilities/pictures_Library=false
-capabilities/phone_Call=false
-capabilities/removable_Storage=false
-capabilities/shared_User_Certificates=false
-capabilities/user_Account_Information=false
-capabilities/videos_Library=false
-capabilities/voip_Call=false
-capabilities/bluetooth=false
-capabilities/location=false
-capabilities/microphone=false
-capabilities/proximity=false
-capabilities/webcam=false
-
 [preset.4]
 
-name="Linux/X11 Core"
-platform="Linux/X11"
-runnable=false
+name="Win64 Core"
+platform="Windows Desktop"
+runnable=true
 custom_features=""
 export_filter="resources"
 export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://debug.gd", "res://default_env.tres", "res://gamestate.gd", "res://input_maping.gd", "res://namelist.gd", "res://options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
 include_filter=""
 exclude_filter=""
-export_path="_exports/core_64_linux/MoonTown.x86_64"
+export_path="_exports/core_64_win/MoonTown.exe"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -183,10 +132,18 @@ texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
 custom_template/release=""
 custom_template/debug=""
+application/icon=""
+application/file_version=""
+application/product_version=""
+application/company_name=""
+application/product_name=""
+application/file_description=""
+application/copyright=""
+application/trademarks=""
 
 [preset.5]
 
-name="Mac OSX"
+name="Mac OSX Full"
 platform="Mac OSX"
 runnable=true
 custom_features=""
@@ -219,6 +176,40 @@ texture_format/etc2=false
 
 [preset.6]
 
+name="Mac OSX Core"
+platform="Mac OSX"
+runnable=false
+custom_features=""
+export_filter="resources"
+export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://debug.gd", "res://default_env.tres", "res://gamestate.gd", "res://input_maping.gd", "res://namelist.gd", "res://options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
+include_filter=""
+exclude_filter=""
+export_path="_exports/core_64_mac/MoonTown.zip"
+patch_list=PoolStringArray(  )
+script_export_mode=1
+script_encryption_key=""
+
+[preset.6.options]
+
+custom_package/debug=""
+custom_package/release=""
+application/name=""
+application/info="Made with Godot Engine"
+application/icon=""
+application/identifier=""
+application/signature=""
+application/short_version="1.0"
+application/version="1.0"
+application/copyright=""
+display/high_res=false
+codesign/identity=""
+codesign/entitlements=""
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+
+[preset.7]
+
 name="Mac OSX Update Server"
 platform="Mac OSX"
 runnable=true
@@ -231,7 +222,7 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.6.options]
+[preset.7.options]
 
 custom_package/debug=""
 custom_package/release=""
