--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,19 @@
-*.blend filter=lfs diff=lfs merge=lfs -text
-scenes/cshapes/*.shape filter=lfs diff=lfs merge=lfs -text
+# Images
+*.jpeg filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+
+# Sound
+*.ogg filter=lfs diff=lfs merge=lfs -text
+*.wav filter=lfs diff=lfs merge=lfs -text
+
+# Scene Files / 3D Models
+*.collada filter=lfs diff=lfs merge=lfs -text
+*.dae filter=lfs diff=lfs merge=lfs -text
+*.fbx filter=lfs diff=lfs merge=lfs -text
+*.obj filter=lfs diff=lfs merge=lfs -text
+*.gltf filter=lfs diff=lfs merge=lfs -text
+*.bin filter=lfs diff=lfs merge=lfs -text
+
+# Other
+*.shape filter=lfs diff=lfs merge=lfs -text
