--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -12,7 +12,7 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.0.options]
+[preset.0.Options]
 
 texture_format/bptc=false
 texture_format/s3tc=true
@@ -21,7 +21,7 @@ texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
 custom_template/release=""
-custom_template/debug=""
+custom_template/Debugger=""
 
 [preset.1]
 
@@ -30,7 +30,7 @@ platform="Linux/X11"
 runnable=false
 custom_features=""
 export_filter="resources"
-export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://debug.gd", "res://default_env.tres", "res://gamestate.gd", "res://input_maping.gd", "res://namelist.gd", "res://options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
+export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://Debugger.gd", "res://default_env.tres", "res://GameState.gd", "res://input_maping.gd", "res://namelist.gd", "res://Options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
 include_filter=""
 exclude_filter=""
 export_path="_exports/core_64_linux/MoonTown.x86_64"
@@ -38,7 +38,7 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.1.options]
+[preset.1.Options]
 
 texture_format/bptc=false
 texture_format/s3tc=true
@@ -47,7 +47,7 @@ texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
 custom_template/release=""
-custom_template/debug=""
+custom_template/Debugger=""
 
 [preset.2]
 
@@ -63,7 +63,7 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.2.options]
+[preset.2.Options]
 
 texture_format/bptc=false
 texture_format/s3tc=true
@@ -72,7 +72,7 @@ texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
 custom_template/release=""
-custom_template/debug=""
+custom_template/Debugger=""
 
 [preset.3]
 
@@ -88,7 +88,7 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.3.options]
+[preset.3.Options]
 
 texture_format/bptc=false
 texture_format/s3tc=true
@@ -97,7 +97,7 @@ texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
 custom_template/release=""
-custom_template/debug=""
+custom_template/Debugger=""
 application/icon=""
 application/file_version=""
 application/product_version=""
@@ -114,7 +114,7 @@ platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="resources"
-export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://debug.gd", "res://default_env.tres", "res://gamestate.gd", "res://input_maping.gd", "res://namelist.gd", "res://options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
+export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://Debugger.gd", "res://default_env.tres", "res://GameState.gd", "res://input_maping.gd", "res://namelist.gd", "res://Options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
 include_filter=""
 exclude_filter=""
 export_path="_exports/core_64_win/MoonTown.exe"
@@ -122,7 +122,7 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.4.options]
+[preset.4.Options]
 
 texture_format/bptc=false
 texture_format/s3tc=true
@@ -131,7 +131,7 @@ texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
 custom_template/release=""
-custom_template/debug=""
+custom_template/Debugger=""
 application/icon=""
 application/file_version=""
 application/product_version=""
@@ -155,9 +155,9 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.5.options]
+[preset.5.Options]
 
-custom_package/debug=""
+custom_package/Debugger=""
 custom_package/release=""
 application/name="Moonwards"
 application/info="Made with Godot Engine"
@@ -181,7 +181,7 @@ platform="Mac OSX"
 runnable=false
 custom_features=""
 export_filter="resources"
-export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://debug.gd", "res://default_env.tres", "res://gamestate.gd", "res://input_maping.gd", "res://namelist.gd", "res://options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
+export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://Debugger.gd", "res://default_env.tres", "res://GameState.gd", "res://input_maping.gd", "res://namelist.gd", "res://Options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
 include_filter=""
 exclude_filter=""
 export_path="_exports/core_64_mac/MoonTown.zip"
@@ -189,9 +189,9 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.6.options]
+[preset.6.Options]
 
-custom_package/debug=""
+custom_package/Debugger=""
 custom_package/release=""
 application/name=""
 application/info="Made with Godot Engine"
@@ -222,9 +222,9 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.7.options]
+[preset.7.Options]
 
-custom_package/debug=""
+custom_package/Debugger=""
 custom_package/release=""
 application/name="Moonwards"
 application/info="Made with Godot Engine"
