Replace GameState with Lobby

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -30,7 +30,7 @@ platform="Linux/X11"
 runnable=false
 custom_features=""
 export_filter="resources"
-export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://Debugger.gd", "res://default_env.tres", "res://GameState.gd", "res://input_maping.gd", "res://namelist.gd", "res://Options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
+export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://Debugger.gd", "res://default_env.tres", "res://Lobby.gd", "res://input_maping.gd", "res://namelist.gd", "res://Options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
 include_filter=""
 exclude_filter=""
 export_path="_exports/core_64_linux/MoonTown.x86_64"
@@ -114,7 +114,7 @@ platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="resources"
-export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://Debugger.gd", "res://default_env.tres", "res://GameState.gd", "res://input_maping.gd", "res://namelist.gd", "res://Options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
+export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://Debugger.gd", "res://default_env.tres", "res://Lobby.gd", "res://input_maping.gd", "res://namelist.gd", "res://Options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
 include_filter=""
 exclude_filter=""
 export_path="_exports/core_64_win/MoonTown.exe"
@@ -181,7 +181,7 @@ platform="Mac OSX"
 runnable=false
 custom_features=""
 export_filter="resources"
-export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://Debugger.gd", "res://default_env.tres", "res://GameState.gd", "res://input_maping.gd", "res://namelist.gd", "res://Options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
+export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://Debugger.gd", "res://default_env.tres", "res://Lobby.gd", "res://input_maping.gd", "res://namelist.gd", "res://Options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
 include_filter=""
 exclude_filter=""
 export_path="_exports/core_64_mac/MoonTown.zip"
