manual override for server initialization

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -12,7 +12,7 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.0.Options]
+[preset.0.options]
 
 texture_format/bptc=false
 texture_format/s3tc=true
@@ -20,8 +20,9 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
+binary_format/embed_pck=false
 custom_template/release=""
-custom_template/Debugger=""
+custom_template/debug=""
 
 [preset.1]
 
@@ -30,7 +31,7 @@ platform="Linux/X11"
 runnable=false
 custom_features=""
 export_filter="resources"
-export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://Debugger.gd", "res://default_env.tres", "res://Lobby.gd", "res://input_maping.gd", "res://namelist.gd", "res://Options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
+export_files=PoolStringArray( "res://Debugger.gd", "res://Lobby.gd", "res://Options.gd", "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://default_env.tres", "res://input_maping.gd", "res://namelist.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
 include_filter=""
 exclude_filter=""
 export_path="_exports/core_64_linux/MoonTown.x86_64"
@@ -38,7 +39,7 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.1.Options]
+[preset.1.options]
 
 texture_format/bptc=false
 texture_format/s3tc=true
@@ -46,8 +47,9 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
+binary_format/embed_pck=false
 custom_template/release=""
-custom_template/Debugger=""
+custom_template/debug=""
 
 [preset.2]
 
@@ -63,7 +65,7 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.2.Options]
+[preset.2.options]
 
 texture_format/bptc=false
 texture_format/s3tc=true
@@ -71,8 +73,9 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
+binary_format/embed_pck=false
 custom_template/release=""
-custom_template/Debugger=""
+custom_template/debug=""
 
 [preset.3]
 
@@ -88,7 +91,7 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.3.Options]
+[preset.3.options]
 
 texture_format/bptc=false
 texture_format/s3tc=true
@@ -96,8 +99,17 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
+binary_format/embed_pck=false
 custom_template/release=""
-custom_template/Debugger=""
+custom_template/debug=""
+codesign/enable=false
+codesign/identity=""
+codesign/password=""
+codesign/timestamp=true
+codesign/timestamp_server_url=""
+codesign/digest_algorithm=1
+codesign/description=""
+codesign/custom_options=PoolStringArray(  )
 application/icon=""
 application/file_version=""
 application/product_version=""
@@ -114,7 +126,7 @@ platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="resources"
-export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://Debugger.gd", "res://default_env.tres", "res://Lobby.gd", "res://input_maping.gd", "res://namelist.gd", "res://Options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
+export_files=PoolStringArray( "res://Debugger.gd", "res://Lobby.gd", "res://Options.gd", "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://default_env.tres", "res://input_maping.gd", "res://namelist.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
 include_filter=""
 exclude_filter=""
 export_path="_exports/core_64_win/MoonTown.exe"
@@ -122,7 +134,7 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.4.Options]
+[preset.4.options]
 
 texture_format/bptc=false
 texture_format/s3tc=true
@@ -130,8 +142,17 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
+binary_format/embed_pck=false
 custom_template/release=""
-custom_template/Debugger=""
+custom_template/debug=""
+codesign/enable=false
+codesign/identity=""
+codesign/password=""
+codesign/timestamp=true
+codesign/timestamp_server_url=""
+codesign/digest_algorithm=1
+codesign/description=""
+codesign/custom_options=PoolStringArray(  )
 application/icon=""
 application/file_version=""
 application/product_version=""
@@ -155,11 +176,11 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.5.Options]
+[preset.5.options]
 
-custom_package/Debugger=""
-custom_package/release=""
-application/name="Moonwards"
+custom_template/debug=""
+custom_template/release=""
+application/name=""
 application/info="Made with Godot Engine"
 application/icon=""
 application/identifier=""
@@ -168,8 +189,8 @@ application/short_version="1.0"
 application/version="1.0"
 application/copyright=""
 display/high_res=false
-codesign/identity=""
-codesign/entitlements=""
+privacy/camera_usage_description=""
+privacy/microphone_usage_description=""
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
@@ -181,7 +202,7 @@ platform="Mac OSX"
 runnable=false
 custom_features=""
 export_filter="resources"
-export_files=PoolStringArray( "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://Debugger.gd", "res://default_env.tres", "res://Lobby.gd", "res://input_maping.gd", "res://namelist.gd", "res://Options.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
+export_files=PoolStringArray( "res://Debugger.gd", "res://Lobby.gd", "res://Options.gd", "res://_tests/test_lod_managment/LODMesh.tscn", "res://assets/UI/Menu/Main_menu.tscn", "res://default_env.tres", "res://input_maping.gd", "res://namelist.gd", "res://scripts/UIElement.gd", "res://scripts/UIManager.gd", "res://scripts/log.gd", "res://ui/MainMenu.tscn", "res://utils.gd" )
 include_filter=""
 exclude_filter=""
 export_path="_exports/core_64_mac/MoonTown.zip"
@@ -189,10 +210,10 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.6.Options]
+[preset.6.options]
 
-custom_package/Debugger=""
-custom_package/release=""
+custom_template/debug=""
+custom_template/release=""
 application/name=""
 application/info="Made with Godot Engine"
 application/icon=""
@@ -202,8 +223,8 @@ application/short_version="1.0"
 application/version="1.0"
 application/copyright=""
 display/high_res=false
-codesign/identity=""
-codesign/entitlements=""
+privacy/camera_usage_description=""
+privacy/microphone_usage_description=""
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
@@ -222,11 +243,11 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.7.Options]
+[preset.7.options]
 
-custom_package/Debugger=""
-custom_package/release=""
-application/name="Moonwards"
+custom_template/debug=""
+custom_template/release=""
+application/name=""
 application/info="Made with Godot Engine"
 application/icon=""
 application/identifier=""
@@ -235,8 +256,8 @@ application/short_version="1.0"
 application/version="1.0"
 application/copyright=""
 display/high_res=false
-codesign/identity=""
-codesign/entitlements=""
+privacy/camera_usage_description=""
+privacy/microphone_usage_description=""
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
