--- a/.gitattributes
+++ b/.gitattributes
@@ -12,8 +12,11 @@
 *.dae filter=lfs diff=lfs merge=lfs -text
 *.fbx filter=lfs diff=lfs merge=lfs -text
 *.obj filter=lfs diff=lfs merge=lfs -text
+*.mtl filter=lfs diff=lfs merge=lfs -text
 *.gltf filter=lfs diff=lfs merge=lfs -text
+*.glb filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
+
 
 # Other
 *.shape filter=lfs diff=lfs merge=lfs -text
